2.0.6-2 junit updated